test/error/0002-redefinition4.c
/*
PATTERN: x
PATTERN: c:9
*/

struct x {
	int x;
	int y;
	struct { int x; };
};
